# agent-dev

./: .dev-suite.json  .dockerignore  .gitignore  CLAUDE.md  CONTRIBUTING.md  Makefile  README.md  _trigger  docker-compose.yml  greet.py  output.py  test-mcp.md  test.ps1  test.sh  validate_email.py
.claude/: settings.json
.devcontainer/: devcontainer.json
.github/: setup-labels.sh
.github/ISSUE_TEMPLATE/: bug.md  feature.md  task.md
.github/workflows/: ci.yml  claude-fix.yml  claude-review.yml
Tools/: .git-commit-agent.yaml.example  README.md  TESTING_GUIDE.md  git_commit_agent.py  requirements.txt  test_git_commit_agent.py
config/: claude-desktop.json
containers/dev/: Dockerfile  entrypoint.sh
containers/func/: Dockerfile  entrypoint.sh
containers/mcp-fs/: Dockerfile  package.json  server.js
containers/mcp-shell/: Dockerfile  package.json  server.js
containers/web/: Dockerfile  entrypoint.sh
dashboard/: .env.example  README.md  package.json  pnpm-lock.yaml
dashboard/src/: app.css
dev-suite/: .env.example  .fix-placeholder  .gitignore  mcp-config.json  pyproject.toml  triforce.py  triforce_zelda.py
dev-suite/sandbox-templates/fullstack-dev/: README.md  e2b.Dockerfile
dev-suite/scripts/: build_fullstack_template.py
dev-suite/src/: ORCHESTRATOR_PATCH.md  __init__.py  __main__.py  cli.py  github_workspace.py  orchestrator.py  tracing.py  workspace.py
dev-suite/src/agents/: __init__.py  architect.py  developer.py  planner.py  qa.py
dev-suite/src/api/: __init__.py  auth.py  events.py  github_prs.py  main.py  models.py  runner.py  state.py
dev-suite/src/memory/: __init__.py  chroma_store.py  factory.py  l0_core.yaml  protocol.py  seed.py  summarizer.py
dev-suite/src/sandbox/: __init__.py  e2b_runner.py  project_runner.py  validation_commands.py
dev-suite/src/tools/: __init__.py  code_parser.py  github_fetch.py  mcp_bridge.py  mcp_provider.py  provider.py
dev-suite/tests/: conftest.py  test_api.py  test_apply_code.py  test_architect_two_phase.py  test_cli.py  test_code_parser.py  test_decomposition.py  test_e2e.py  test_e2e_integration.py  test_e2e_live.py  test_gather_context.py  test_github_fetch.py  test_github_prs.py  test_github_prs_TEMP.py  test_github_workspace.py  test_mcp_provider.py  test_mcp_tools.py  test_memory.py  test_orchestrator.py  test_orchestrator_cross_dir.py  test_planner.py  test_project_validation.py  test_publish_code.py  test_qa_escalation.py  test_retry_loop.py  test_run_log.py  test_runner.py  test_sandbox.py  test_sandbox_validate.py  test_sse.py  test_summarizer.py  test_surgical_edits.py  test_tool_binding.py  test_tool_provider_cross_dir.py  test_tracing.py  test_validation_commands.py  test_workspace.py
docs/: README.md  mcp-filesystem-server.md  mcp-shell-server.md
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
scripts/: smoke-test.sh  verify-stack.sh
test/: test.py
test-scripts/: test-mcp.md  test-shell.ps1  test.ps1  test.sh
tools/: .git-commit-agent.yaml.example  README.md  git_commit_agent.py
workspace/: README.md  package-lock.json  package.json  triforce.py  triforce_ephemeral.py  triforce_final.py  triforce_v10.py  triforce_v12.py  triforce_v13.py  triforce_v14.py  triforce_v15.py  triforce_v16.py  triforce_v17.py  triforce_v3.py  triforce_v4.py  triforce_v5.py  triforce_v7.py  triforce_v8.py  triforce_v9.py
(+60 files in other folders)
