[project]
name = "dev-suite"
version = "0.2.0"
description = "Stateful AI Workforce orchestrator — Phase 2"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.3",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-google-genai>=2.0",
    "chromadb>=0.5",
    "e2b>=1.0",
    "e2b-code-interpreter>=1.0",
    "langfuse>=3.0",
    "mcp>=1.7",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring external services (E2B, etc.)",
]
