[project]
name = "dev-suite"
version = "0.2.0"
description = "Stateful AI Workforce orchestrator — Phase 2"
requires-python = ">=3.11"
dependencies = [
    "langgraph>=1.0",
    "langchain>=1.0",
    "langchain-anthropic>=1.0",
    "langchain-google-genai>=4.0",
    "chromadb>=1.0",
    "e2b>=1.0",
    "e2b-code-interpreter>=1.0",
    "langfuse>=4.0",
    "mcp>=1.7",
    "python-dotenv>=1.0",
    "pydantic>=2.0",
]

[project.scripts]
dev-suite = "src.cli:cli_entry"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "httpx>=0.27",
]
api = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sse-starlette>=2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 120
target-version = "py311"
exclude = ["tests/test_github_prs_TEMP.py"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]
ignore = ["E501"]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["N806", "F841"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: tests requiring external services (E2B, etc.)",
]
